# llm-evaluation-lab

./: CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: improvement.md
.github/workflows/: ci.yml
configs/: rlhf_rubric.json
data/: examples.jsonl
docs/: ANNOTATOR_AGREEMENT.md  DATASET_SCHEMA.md
reports/: sample_report.json  sample_report.md
rubrics/: rlhf_response_rubric.md
src/: evaluate_responses.py
src/eval_lab/: __init__.py  cli.py  dataset.py  reporting.py  rubric.py  scoring.py
tests/: test_evaluate_responses.py
