[project]
name = "llm-evaluation-lab"
version = "0.2.0"
description = "Config-driven tools for pairwise LLM response evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Yashowardhan Singh Tomar" }
]
dependencies = []

[project.scripts]
llm-eval-lab = "eval_lab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
